# variant-counter-script

./: .gitignore  counter.py  freqs.json  pyproject.toml  results.txt  sp-data.csv  variants.json
